--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Entre em contato comigo através do e-mail: <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></p>
+            <p>Entre em contato comigo através do e-mail: <a href="mailto:seuemail@exemplo.com">davi.amorin2@gmail.com</a></p>
         </section>
     </main>
 
     <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; <span id="ano"></span> Meu Nome. Todos os direitos reservados.</p>
+        <p>&copy; <span id="ano"></span> David Amorim. Todos os direitos reservados.</p>
     </footer>
 
 ]    <script>
